--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     <div class="modal-body"> 
       <div id="hidden-element2">
-          <img src="/img/БрюшковаСофья.jpg" alt="image2" class="profile-icon" />
+          <img src="img/БрюшковаСофья.jpg" alt="image2" class="profile-icon" />
       </div>
     </div>
         </div>
