--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="modal-body"> 
         <div id="hidden-element">
-            <img src="/img/АзаренкоАлексей.jpg" alt="image3" class="profile-icon" />
+            <img src="img/АзаренкоАлексей.jpg" alt="image3" class="profile-icon" />
         </div>
       </div>
     <div class="modal-body"> 
@@ -43,28 +43,28 @@
              <!-- Контент -->
             <div class="modal-body">      
         <div class="profile-card">
-            <img src="/img/АзаренкоАлексей.jpg" alt="image3" class="profile-icon" />
+            <img src="img/АзаренкоАлексей.jpg" alt="image3" class="profile-icon" />
             <div class="profile-name">Азаренко Алексей</div>
             <input id="click-to-hide1"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButton.js"></script>
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
           </div>
           <div class="profile-card">
-            <img src="/img/БрюшковаСофья.jpg" alt="image2" class="profile-icon" />
+            <img src="img/БрюшковаСофья.jpg" alt="image2" class="profile-icon" />
             <div class="profile-name">Брюшкова Софья</div>
             <input id="click-to-hide2"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButton.js"></script>
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
           </div>
           <div class="profile-card">
-            <img src="/img/КиевскийАртемий.jpg" alt="image3" class="profile-icon" />
+            <img src="img/КиевскийАртемий.jpg" alt="image3" class="profile-icon" />
             <div class="profile-name">Киевский Артемий</div>
             <input id="click-to-hide3"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButton.js"></script>
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
         </div>
         <div class="profile-card">
-            <img src="/img/НовоселовДмитрий.jpg" alt="image3" class="profile-icon" />
+            <img src="img/НовоселовДмитрий.jpg" alt="image3" class="profile-icon" />
             <div class="profile-name">Новоселов Дмитрий</div>
             <input id="click-to-hide4"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButton.js"></script>
@@ -75,25 +75,25 @@
             <div class="gap"></div>
             <div class="modal-body">    
         <div class="profile-card">
-            <img src="/img/СенниковаЮлия.jpg" alt="image2" class="profile-icon" />
+            <img src="img/СенниковаЮлия.jpg" alt="image2" class="profile-icon" />
             <div class="profile-name">Сенникова Юлия</div>
             <input id="click-to-hide5"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
           </div>
           <div class="profile-card">
-            <img src="/img/ПепельницынАлександр.jpg" alt="image2" class="profile-icon" />
+            <img src="img/ПепельницынАлександр.jpg" alt="image2" class="profile-icon" />
             <div class="profile-name">Пепельницын Александр</div>
             <input id="click-to-hide6"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
           </div>
           <div class="profile-card">
-            <img src="/img/ТабаковаМария.jpg" alt="image3" class="profile-icon" />
+            <img src="img/ТабаковаМария.jpg" alt="image3" class="profile-icon" />
             <div class="profile-name">Табакова Мария</div>
             <input id="click-to-hide7"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
         </div>
         <div class="profile-card">
-            <img src="/img/ВанСветлана .jpg" alt="image3" class="profile-icon" />
+            <img src="img/ВанСветлана .jpg" alt="image3" class="profile-icon" />
             <div class="profile-name">Ван Светлана </div>
             <input id="click-to-hide8"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
