--- a/index.html
+++ b/index.html
@@ -103,25 +103,25 @@
             <div class="gap"></div>
             <div class="modal-body">    
         <div class="profile-card">
-            <img src="/img/ВасильевРоман.jpg" alt="image2" class="profile-icon" />
+            <img src="img/ВасильевРоман.jpg" alt="image2" class="profile-icon" />
             <div class="profile-name">Васильев Роман</div>
             <input id="click-to-hide9"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
           </div>
           <div class="profile-card">
-            <img src="/img/ТереньтевДмитрий.jpg" alt="image2" class="profile-icon" />
+            <img src="img/ТереньтевДмитрий.jpg" alt="image2" class="profile-icon" />
             <div class="profile-name">Тереньтев Дмитрий</div>
             <input id="click-to-hide10"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
           </div>
           <div class="profile-card">
-            <img src="/img/ЛевановРоман.jpg" alt="image3" class="profile-icon" />
+            <img src="img/ЛевановРоман.jpg" alt="image3" class="profile-icon" />
             <div class="profile-name">Леванов Роман</div>
             <input id="click-to-hide11"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
         </div>
         <div class="profile-card">
-            <img src="/img/ПереверзеваАнна.jpg" alt="image3" class="profile-icon" />
+            <img src="img/ПереверзеваАнна.jpg" alt="image3" class="profile-icon" />
             <div class="profile-name">Переверзева Анна</div>
             <input id="click-to-hide12"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
@@ -131,25 +131,25 @@
             <div class="gap"></div>
             <div class="modal-body">    
         <div class="profile-card">
-            <img src="/img/ЕваФог.jpg" alt="image2" class="profile-icon" />
+            <img src="img/ЕваФог.jpg" alt="image2" class="profile-icon" />
             <div class="profile-name">Ева Фог</div>
             <input id="click-to-hide13"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
           </div>
           <div class="profile-card">
-            <img src="/img/ТумановДаниил .jpg" alt="image2" class="profile-icon" />
+            <img src="img/ТумановДаниил .jpg" alt="image2" class="profile-icon" />
             <div class="profile-name">Туманов Даниил</div>
             <input id="click-to-hide14"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
           </div>
           <div class="profile-card">
-            <img src="/img/ЕвдокимоваВалентина.jpg" alt="image3" class="profile-icon" />
+            <img src="img/ЕвдокимоваВалентина.jpg" alt="image3" class="profile-icon" />
             <div class="profile-name">Евдокимова Валентина</div>
             <input id="click-to-hide15"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
         </div>
         <div class="profile-card">
-            <img src="/img/ДороховЯрослав.jpg" alt="image3" class="profile-icon" />
+            <img src="img/ДороховЯрослав.jpg" alt="image3" class="profile-icon" />
             <div class="profile-name">Дорохов Ярослав</div>
             <input id="click-to-hide16"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
@@ -159,25 +159,25 @@
              <div class="gap"></div>
              <div class="modal-body">    
          <div class="profile-card">
-             <img src="/img/ДмитрийНикитченко.jpg" alt="image2" class="profile-icon" />
+             <img src="img/ДмитрийНикитченко.jpg" alt="image2" class="profile-icon" />
              <div class="profile-name">Дмитрий Никитченко</div>
              <input id="click-to-hide17"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
            </div>
            <div class="profile-card">
-             <img src="/img/ВалентинаСкиндер.jpg" alt="image2" class="profile-icon" />
+             <img src="img/ВалентинаСкиндер.jpg" alt="image2" class="profile-icon" />
              <div class="profile-name">Валентина Скиндер</div>
              <input id="click-to-hide18"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
            </div>
            <div class="profile-card">
-             <img src="/img/БыданцевДмитрий.jpg" alt="image3" class="profile-icon" />
+             <img src="img/БыданцевДмитрий.jpg" alt="image3" class="profile-icon" />
              <div class="profile-name">Быданцев Дмитрий</div>
              <input id="click-to-hide19"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
          </div>
          <div class="profile-card">
-             <img src="/img/ЛогиновскихАртем.jpg" alt="image3" class="profile-icon" />
+             <img src="img/ЛогиновскихАртем.jpg" alt="image3" class="profile-icon" />
              <div class="profile-name">Логиновских Артем</div>
              <input id="click-to-hide20"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
@@ -187,25 +187,25 @@
              <div class="gap"></div>
              <div class="modal-body">    
          <div class="profile-card">
-             <img src="/img/ЗакораАлександр.jpg" alt="image2" class="profile-icon" />
+             <img src="img/ЗакораАлександр.jpg" alt="image2" class="profile-icon" />
              <div class="profile-name">Закора Александр</div>
              <input id="click-to-hide21"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
            </div>
            <div class="profile-card">
-             <img src="/img/ПопковаТатьяна.jpg" alt="image2" class="profile-icon" />
+             <img src="img/ПопковаТатьяна.jpg" alt="image2" class="profile-icon" />
              <div class="profile-name">Попкова Татьяна</div>
              <input id="click-to-hide22"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
            </div>
            <div class="profile-card">
-             <img src="/img/ПономареваЮлия.jpg" alt="image3" class="profile-icon" />
+             <img src="img/ПономареваЮлия.jpg" alt="image3" class="profile-icon" />
              <div class="profile-name">Пономарева Юлия</div>
              <input id="click-to-hide23"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
          </div>
          <div class="profile-card">
-             <img src="/img/ДенисенкоАнна.jpg" alt="image3" class="profile-icon" />
+             <img src="img/ДенисенкоАнна.jpg" alt="image3" class="profile-icon" />
              <div class="profile-name">Денисенко Анна</div>
              <input id="click-to-hide24"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
@@ -215,25 +215,25 @@
              <div class="gap"></div>
              <div class="modal-body">    
          <div class="profile-card">
-             <img src="/img/ЧерепановАлексей.jpg" alt="image2" class="profile-icon" />
+             <img src="img/ЧерепановАлексей.jpg" alt="image2" class="profile-icon" />
              <div class="profile-name">Черепанов Алексей</div>
              <input id="click-to-hide25"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
            </div>
            <div class="profile-card">
-             <img src="/img/БариноваАнна.jpg" alt="image2" class="profile-icon" />
+             <img src="img/БариноваАнна.jpg" alt="image2" class="profile-icon" />
              <div class="profile-name">Баринова Анна</div>
              <input id="click-to-hide26"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
            </div>
            <div class="profile-card">
-             <img src="/img/КузнецоваАнна.jpg" alt="image3" class="profile-icon" />
+             <img src="img/КузнецоваАнна.jpg" alt="image3" class="profile-icon" />
              <div class="profile-name">Кузнецова Анна</div>
              <input id="click-to-hide27"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
          </div>
          <div class="profile-card">
-             <img src="/img/АфанасьеваОльга.jpg" alt="image3" class="profile-icon" />
+             <img src="img/АфанасьеваОльга.jpg" alt="image3" class="profile-icon" />
              <div class="profile-name">Афанасьева Ольга</div>
              <input id="click-to-hide28"  type="button" class="button2" value="Выбрать" >
              <script type="text/javascript" src="js/scriptButtonColor.js"></script>
@@ -243,7 +243,7 @@
               <div class="gap"></div>
               <div class="modal-body">    
           <div class="profile-card">
-              <img src="/img/РождественскийПавел.jpg" alt="image2" class="profile-icon" />
+              <img src="img/РождественскийПавел.jpg" alt="image2" class="profile-icon" />
               <div class="profile-name">Рождественский Павел</div>
               <input id="click-to-hide29"  type="button" class="button2" value="Выбрать" >
             <script type="text/javascript" src="js/scriptButtonColor.js"></script>
